# vaultwarden_ldap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.alpine  Makefile  README.md  alpine_deprecation.sh  docker-compose-ldap-server.yml  docker-compose.yml  example.config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo.yml  docker.yml  dockerhub.yml  itest.yml  test.yml
itest/: 50-seed-user.ldif  config-anon.toml  config.toml  docker-compose.itest-anon-env.yml  docker-compose.itest-anon.yml  docker-compose.itest-env.yml  docker-compose.itest.yml
itest/ldif/: 50-seed-user.ldif
itest/schema/: anon.ldif
scripts/: check-version.sh
src/: bw_admin.rs  config.rs  main.rs  vw_admin.rs
