[package]
name = "vaultwarden_ldap"
version = "1.0.0"
authors = ["ViViDboarder <vividboarder@gmail.com>"]
edition = "2018"

[dependencies]
ldap3 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
envy = "0.4.1"
pledge = "0.4.2"
unveil = "0.3.2"
