[package]
name = "vaultwarden_ldap"
version = "2.2.1"
authors = ["ViViDboarder <vividboarder@gmail.com>"]
edition = "2018"

[dependencies]
ldap3 = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
envy = "0.4.1"
pledge = "0.4.2"
unveil = "0.3.2"
